- Created "reduce" actions for arrays, lists, sets and generic multiple operators.
- Created "FnReduce" function class with functions ready to be used in "reduce" operations.
- Created unfold functions and actions for generic unique operators.
- Added aggregation functions in FnMath for arrays.
- Improved precision management in FnMath functions
- Added "negate" function to FnBoolean.
- All predefined op4j functions now extend Function and thus provide an "execute" method
  without context which allows them to be executed on their own more easily.
- Added utility methods to Fn like "Fn.onString()" to avoid having to specify the type as
  "Fn.on(Types.STRING)".
- Added "eq" (equality) and "notEq" (not equality) function to FnObject, FnNumber, 
  FnBoolean, FnString, FnCalendar, FnDate.
- Added "lessThan", "lessOrEqTo", "greaterThan" and "greaterOrEqTo" functions to 
  FnObject, FnNumber and FnString.
- Added "and", "or" and "not" functions to FnBoolean and Fn.
- Added "isNull" and "isNotNull" functions to FnObject, FnNumber, FnBoolean, FnString, FnCalendar,
  FnDate.
- Added "chain" function to "Fn".
- Added "count" function to FnArray, FnList, FnMap and FnSet
- Added "contains", "notContains, "containsAll", "containsAny" and "containsNone" to 
  FnArray, FnList and FnSet.
- Added "containsKey", "notContainsKey", "containsAllKeys", "containsAnyKeys" and 
  "containsNoneKeys" to FnMap.
- Added "by" to Fn and FnBoolean.
- Added "isNullBy" and "isNotNullBy" to FnBoolean and FnObject
- Added "eqBy" and "notEqBy" to FnObject, FnNumber and FnBoolean.
- Added "lessThanBy", "lessOrEqToBy", "greaterThanBy", "greaterOrEqToBy" to FnObject and FnNumber.
- Added "sortBy" functions to FnArray, FnList, FnMap and FnSet. Added "sortBy" actions to
  array, list, map and set operators. 
- Added "ifTrue", "ifFalse", "ifNull", "ifNotNull", "ifNullOrTrue", "ifNullOrFalse",
  "ifNotNullAndTrue" and "ifNotNulAndFalse" functions to Fn.


1.0-beta1
=========
- First beta release of op4j.